@@ -1,11 +1,14 @@
 package im.fooding.app.service.ceo.store;
 
 import im.fooding.app.dto.request.ceo.store.CeoCreateStoreRequest;
+import im.fooding.app.dto.request.ceo.store.CeoSearchStoreRequest;
 import im.fooding.app.dto.request.ceo.store.CeoUpdateStoreRequest;
 import im.fooding.app.dto.response.ceo.store.CeoStoreResponse;
+import im.fooding.core.model.region.Region;
 import im.fooding.core.model.store.Store;
 import im.fooding.core.model.store.StorePosition;
 import im.fooding.core.model.user.User;
+import im.fooding.core.service.region.RegionService;
 import im.fooding.core.service.store.StoreMemberService;
 import im.fooding.core.service.store.StoreService;
 import im.fooding.core.service.user.UserService;
@@ -15,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,10 +26,13 @@ public class CeoStoreService {
     private final StoreService storeService;
     private final StoreMemberService storeMemberService;
     private final UserService userService;
+    private final RegionService regionService;
 
     @Transactional(readOnly = true)
-    public List<CeoStoreResponse> list(long userId) {
-        return storeService.list(userId).stream().map(CeoStoreResponse::new).collect(Collectors.toList());
+    public List<CeoStoreResponse> list(long userId, CeoSearchStoreRequest search) {
+        return storeService.list(userId, search.toStoreFilter()).stream()
+                .map(CeoStoreResponse::new)
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -39,8 +44,9 @@ public class CeoStoreService {
     @Transactional
     public Long create(CeoCreateStoreRequest request, long userId) {
         User user = userService.findById(userId);
+        Region region = regionService.get(request.getRegionId());
 
-        Store store = storeService.create(user, request.getName(), request.getCity(), request.getAddress(), request.getCategory(),
+        Store store = storeService.create(user, request.getName(), region, request.getCity(), request.getAddress(), request.getCategory(),
                 request.getDescription(), request.getPriceCategory(), request.getEventDescription(), request.getContactNumber(),
                 request.getDirection(), request.getInformation(), request.getIsParkingAvailable(), request.getIsNewOpen(),
                 request.getIsTakeOut(), request.getLatitude(), request.getLongitude());
@@ -53,7 +59,9 @@ public class CeoStoreService {
     @Transactional
     public void update(Long id, CeoUpdateStoreRequest request, long userId) {
         storeMemberService.checkMember(id, userId);
-        storeService.update(id, request.getName(), request.getCity(), request.getAddress(), request.getCategory(), request.getDescription(),
+        Region region = regionService.get(request.getRegionId());
+
+        storeService.update(id, request.getName(), region, request.getCity(), request.getAddress(), request.getCategory(), request.getDescription(),
                 request.getContactNumber(), request.getPriceCategory(), request.getEventDescription(), request.getDirection(),
                 request.getInformation(), request.getIsParkingAvailable(), request.getIsNewOpen(), request.getIsTakeOut(), request.getLatitude(), request.getLongitude());
     }
